--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
+  "name": "react.dev",
+  "version": "0.0.0",
+  "main": "/src/index.js",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "serve": "11.2.0",
-    "@types/react": "18.2.38",
-    "@types/react-dom": "18.2.15",
-    "typescript": "4.4.4",
-    "parcel-bundler": "1.6.1",
     "vite": "^5.0.11",
     "@vitejs/plugin-react": "^4.2.1"
   }
